exports[`no-expect-failure-without-reason > invalid(1): import test from 'node:test';\ntest('t', {expectFailure: true}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', {expectFailure: true}, () => {});

`;

exports[`no-expect-failure-without-reason > invalid(1): import test from 'node:test';\ntest('t', {expectFailure: true}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', {expectFailure: true}, () => {});
    |            ^^^^^^^^^^^^^^^^^^^ Give \`expectFailure\` a reason string instead of \`true\` explaining why.

`;

exports[`no-expect-failure-without-reason > invalid(2): import {it as check} from 'node:test';\ncheck('t', {expectFailure: true}, () => {}); 1`] = `

  1 | import {it as check} from 'node:test';
  2 | check('t', {expectFailure: true}, () => {});

`;

exports[`no-expect-failure-without-reason > invalid(2): import {it as check} from 'node:test';\ncheck('t', {expectFailure: true}, () => {}); 2`] = `

Message:
  1 | import {it as check} from 'node:test';
> 2 | check('t', {expectFailure: true}, () => {});
    |             ^^^^^^^^^^^^^^^^^^^ Give \`expectFailure\` a reason string instead of \`true\` explaining why.

`;

exports[`no-expect-failure-without-reason > invalid(3): import {suite} from 'node:test';\nsuite('s', {expectFailure: true}, () => {}); 1`] = `

  1 | import {suite} from 'node:test';
  2 | suite('s', {expectFailure: true}, () => {});

`;

exports[`no-expect-failure-without-reason > invalid(3): import {suite} from 'node:test';\nsuite('s', {expectFailure: true}, () => {}); 2`] = `

Message:
  1 | import {suite} from 'node:test';
> 2 | suite('s', {expectFailure: true}, () => {});
    |             ^^^^^^^^^^^^^^^^^^^ Give \`expectFailure\` a reason string instead of \`true\` explaining why.

`;

exports[`no-expect-failure-without-reason > invalid(4): import * as nodeTest from 'node:test';\nnodeTest.test('t', {expectFailure: true}, () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('t', {expectFailure: true}, () => {});

`;

exports[`no-expect-failure-without-reason > invalid(4): import * as nodeTest from 'node:test';\nnodeTest.test('t', {expectFailure: true}, () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test('t', {expectFailure: true}, () => {});
    |                     ^^^^^^^^^^^^^^^^^^^ Give \`expectFailure\` a reason string instead of \`true\` explaining why.

`;

exports[`no-expect-failure-without-reason > invalid(5): import test from 'node:test';\ntest('t', {'expectFailure': true}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', {'expectFailure': true}, () => {});

`;

exports[`no-expect-failure-without-reason > invalid(5): import test from 'node:test';\ntest('t', {'expectFailure': true}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', {'expectFailure': true}, () => {});
    |            ^^^^^^^^^^^^^^^^^^^^^ Give \`expectFailure\` a reason string instead of \`true\` explaining why.

`;

exports[`no-expect-failure-without-reason > invalid(6): import test from 'node:test';\ntest('t', {expectFailure: true as boolean}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', {expectFailure: true as boolean}, () => {});

`;

exports[`no-expect-failure-without-reason > invalid(6): import test from 'node:test';\ntest('t', {expectFailure: true as boolean}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', {expectFailure: true as boolean}, () => {});
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Give \`expectFailure\` a reason string instead of \`true\` explaining why.

`;
